[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptpack"
version = "0.1.0"
description = "Pack JSON data into token-efficient CSV for LLM prompts. Save 40-62% on input tokens."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Yashwanth", email = "yashwanth9394@gmail.com"}]
keywords = ["llm", "tokens", "csv", "json", "prompt", "optimization", "openai", "anthropic", "gpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Yashwanth9394/promptpack"
Repository = "https://github.com/Yashwanth9394/promptpack"
Issues = "https://github.com/Yashwanth9394/promptpack/issues"

[tool.setuptools.packages.find]
include = ["promptpack*"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "tiktoken>=0.5.0"]
